--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,14 @@ Package: NWCTrends
 Type: Package
 Title: Standardized Trend Metrics for Salmonid Populations
 Version: 1.0
-Date: 2016-11-9
-Depends: R (>= 2.15.0), stringr, shiny (>= 0.9.1), rmarkdown, MARSS, tools, xtable, knitr, kableExtra
+Date: 2019-4-27
+Depends: R (>= 2.15.0), 
+    stringr (>= 1.4.0), 
+    rmarkdown (>= 1.12), 
+    MARSS (>= 3.10.10), 
+    xtable (>= 1.8-4), 
+    knitr (>= 1.22), 
+    kableExtra (>= 1.1.0)
 Author: Eli Holmes, NOAA, Seattle, USA
 Maintainer: Elizabeth Holmes - NOAA Federal <eli.holmes@noaa.gov>
 Description: This is runs the standardized trends metrics used in the 2016 5-year Status Review Update for listed PNW salmonids.  To run, type library(NWCTrends) and then NWCTrends_report().
