--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: NWCTrends
 Type: Package
 Title: Standardized Trend Metrics for Salmonid Populations
-Version: 1.8
-Date: 20202-06-02
+Version: 1.9
+Date: 20202-06-07
 Depends: R (>= 2.15.0), 
     stringr (>= 1.4.0), 
     rmarkdown (>= 1.12), 
     MARSS (>= 3.10.10), 
     xtable (>= 1.8-4), 
     knitr (>= 1.22), 
-    kableExtra (>= 1.1.0)
+    kableExtra (>= 1.1.0),
+    gdata
 Author: Eli Holmes, NOAA, Seattle, USA
 Maintainer: Elizabeth Holmes - NOAA Federal <eli.holmes@noaa.gov>
 Description: This is runs the standardized trends metrics used in the 2016 5-year Status Review Update for listed PNW salmonids.  To run, type library(NWCTrends) and then NWCTrends_report().
