--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: NWCTrends
 Type: Package
 Title: Standardized Trend Metrics for Salmonid Populations
-Version: 1.24
-Date: 2021-05-18
+Version: 1.25
+Date: 2021-07-04
 Depends: R (>= 2.15.0), 
     stringr (>= 1.4.0), 
     rmarkdown (>= 1.12), 
@@ -11,11 +11,12 @@ Depends: R (>= 2.15.0),
     knitr (>= 1.22), 
     kableExtra (>= 1.1.0),
     gdata
-Author: Eli Holmes, NOAA, Seattle, USA
+Authors@R: person("Holmes", "Elizabeth", , "eli.holmes@noaa.gov", role = c("aut", "cre"))
 Maintainer: Elizabeth Holmes - NOAA Federal <eli.holmes@noaa.gov>
-Description: This is runs the standardized trends metrics used in the 2016 5-year Status Review Update for listed PNW salmonids.  To run, type library(NWCTrends) and then NWCTrends_report().
+Description: This is runs the standardized trends metrics used in the 2016 and 2020 5-year Status Review Update for listed PNW salmonids.  To run, type library(NWCTrends) and then NWCTrends_report().
 License: GPL-2
 LazyData: yes
 BuildVignettes: yes
 ByteCompile: TRUE
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
