--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,8 +3,10 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   PDF: PDF.pdf
-  SR-pdfs: SR-pdfs.html
   demo-code: demo-code.html
   demo-data: demo-data.html
-last_built: 2021-07-06T21:14Z
+last_built: 2021-07-06T22:22Z
+urls:
+  reference: https://nwfsc-timeseries.github.io/NWCTrends//reference
+  article: https://nwfsc-timeseries.github.io/NWCTrends//articles
 
