--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,9 +2,10 @@ pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  Methods: Methods.html
   demo-code: demo-code.html
   demo-data: demo-data.html
-last_built: 2021-08-16T01:34Z
+last_built: 2021-08-19T19:23Z
 urls:
   reference: https://nwfsc-timeseries.github.io/NWCTrends//reference
   article: https://nwfsc-timeseries.github.io/NWCTrends//articles
