--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,14 +17,14 @@ Imports:
     knitr,
     rmarkdown
 Authors@R: person("Holmes", "Elizabeth", , "eli.holmes@noaa.gov", role = c("aut", "cre"))
-URL: https://nwfsc-timeseries.github.io/NWCTrends, https://github.com/nwfsc-timeseries/NWCTrends
-BugReports: https://github.com/nwfsc-timeseries/NWCTrends/issues
+URL: https://nwfsc-math-bio.github.io/NWCTrends, https://github.com/nwfsc-math-bio/NWCTrends
+BugReports: https://github.com/nwfsc-math-bio/NWCTrends/issues
 Maintainer: Elizabeth Holmes - NOAA Federal <eli.holmes@noaa.gov>
 Description: This is runs the standardized trends metrics used in the 2016 and 2020 5-year NWFSC Viability Reports for listed PNW salmonids.  To run, type library(NWCTrends) and then NWCTrends_report().
 License: GPL-2
 LazyData: yes
 BuildVignettes: yes
 ByteCompile: TRUE
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
