--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,8 +5,8 @@ articles:
   Methods: Methods.html
   demo-code: demo-code.html
   demo-data: demo-data.html
-last_built: 2021-08-19T19:23Z
+last_built: 2021-10-09T05:06Z
 urls:
-  reference: https://nwfsc-timeseries.github.io/NWCTrends//reference
-  article: https://nwfsc-timeseries.github.io/NWCTrends//articles
+  reference: https://nwfsc-math-bio.github.io/NWCTrends//reference
+  article: https://nwfsc-math-bio.github.io/NWCTrends//articles
 
